[package]
name = "spacetimedb-bindings-macro"
version = "0.8.1"
edition = "2021"
license-file = "LICENSE"
description = "Easy support for interacting between SpacetimeDB and Rust."

[lib]
proc-macro = true
# Benching off, because of https://bheisler.github.io/criterion.rs/book/faq.html#cargo-bench-gives-unrecognized-option-errors-for-valid-command-line-options
bench = false

[dependencies]
spacetimedb-primitives = { path = "../primitives", version = "0.8.1" }

bitflags.workspace = true
humantime.workspace = true
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true
