[package]
name = "spacetimedb-bindings-macro"
version.workspace = true
edition.workspace = true
license-file = "LICENSE"
description = "Easy support for interacting between SpacetimeDB and Rust."
rust-version.workspace = true

[lib]
proc-macro = true
# Benching off, because of https://bheisler.github.io/criterion.rs/book/faq.html#cargo-bench-gives-unrecognized-option-errors-for-valid-command-line-options
bench = false

[dependencies]
spacetimedb-primitives.workspace = true

bitflags.workspace = true
humantime.workspace = true
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true
heck.workspace = true
