[package]
name = "spacetimedb-bindings-sys"
version = "0.8.1"
edition = "2021"
license-file = "LICENSE"
description = "Easy support for interacting between SpacetimeDB and Rust."

[lib]
# Benching off, because of https://bheisler.github.io/criterion.rs/book/faq.html#cargo-bench-gives-unrecognized-option-errors-for-valid-command-line-options
bench = false

[dependencies]
getrandom = {workspace = true, optional = true}
spacetimedb-primitives = { path = "../primitives", version = "0.8.1" }
