[package]
name = "spacetimedb-bindings-sys"
version.workspace = true
edition.workspace = true
license-file = "LICENSE"
repository.workspace = true
description = "Easy support for interacting between SpacetimeDB and Rust."
rust-version.workspace = true

[lib]
# Benching off, because of https://bheisler.github.io/criterion.rs/book/faq.html#cargo-bench-gives-unrecognized-option-errors-for-valid-command-line-options
bench = false

[dependencies]
getrandom = {workspace = true, optional = true}
spacetimedb-primitives.workspace = true
