[package]
name = "spacetimedb"
version.workspace = true
edition.workspace = true
license-file = "LICENSE"
repository.workspace = true
description = "Easy support for interacting between SpacetimeDB and Rust."
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "spacetimedb"   # The name of the target.
path = "src/lib.rs"    # The source file of the target.
# Benching off, because of https://bheisler.github.io/criterion.rs/book/faq.html#cargo-bench-gives-unrecognized-option-errors-for-valid-command-line-options
bench = false

[features]
getrandom = ["spacetimedb-bindings-sys/getrandom"]

[dependencies]
spacetimedb-bindings-sys.workspace = true
spacetimedb-lib.workspace = true
spacetimedb-bindings-macro.workspace = true
spacetimedb-primitives.workspace = true

derive_more.workspace = true
log.workspace = true
scoped-tls.workspace = true

[dev-dependencies]
rand.workspace = true
bytes.workspace = true
