[package]
name = "spacetimedb"
version.workspace = true
edition.workspace = true
license-file = "LICENSE"
description = "Easy support for interacting between SpacetimeDB and Rust."
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "spacetimedb"   # The name of the target.
path = "src/lib.rs"    # The source file of the target.
# Benching off, because of https://bheisler.github.io/criterion.rs/book/faq.html#cargo-bench-gives-unrecognized-option-errors-for-valid-command-line-options
bench = false

[features]
default = ["rand"]
rand = ["rand08"]
rand08 = ["dep:rand08", "dep:getrandom02"]
unstable = ["spacetimedb-bindings-sys/unstable"]

[dependencies]
spacetimedb-bindings-sys.workspace = true
spacetimedb-lib.workspace = true
spacetimedb-bindings-macro.workspace = true
spacetimedb-primitives.workspace = true

bytemuck.workspace = true
derive_more.workspace = true
log.workspace = true
scoped-tls.workspace = true

rand08 = { workspace = true, optional = true }
# we depend on getrandom and enable the `custom` feature, so that
# if someone tries to use rand's ThreadRng, it will fail to link
# because no one defined __getrandom_custom
getrandom02 = { workspace = true, optional = true, features = ["custom"] }
serde_json.workspace = true

[dev-dependencies]
insta.workspace = true
trybuild.workspace = true

[lints]
workspace = true
