[package]
name = "cargo-spacetime"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
convert_case = "0.6.0"
spacetimedb-lib = { version = "0.1.0", path = "../spacetimedb-lib" }
wasmtime = { version = "1.0.1", default-features = false, features = ["cranelift"] }
