[package]
name = "spacetimedb-cli"
version.workspace = true
edition.workspace = true
license-file = "LICENSE"
description = "A command line interface for SpacetimeDB"
rust-version.workspace = true

[lib]
bench = false

[[bin]]
name = "spacetime"
path = "src/main.rs"
# Benching off, because of https://bheisler.github.io/criterion.rs/book/faq.html#cargo-bench-gives-unrecognized-option-errors-for-valid-command-line-options
bench = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spacetimedb-primitives.workspace = true
spacetimedb-core.workspace = true
spacetimedb-data-structures.workspace = true
spacetimedb-lib.workspace = true
spacetimedb-standalone = { workspace = true, optional = true }
spacetimedb-client-api-messages.workspace = true
spacetimedb-fs-utils.workspace = true

anyhow.workspace = true
base64.workspace = true
cargo_metadata.workspace = true
chrono.workspace = true
clap = {workspace = true, features = ["derive", "env", "string"]}
colored.workspace = true
convert_case.workspace = true
csv-async = { workspace = true, features = ["tokio"] }
dirs.workspace = true
duct.workspace = true
email_address.workspace = true
futures.workspace = true
flate2.workspace = true
http.workspace = true
is-terminal.workspace = true
itertools.workspace = true
indicatif.workspace = true
jsonwebtoken.workspace = true
mimalloc.workspace = true
regex.workspace = true
reqwest.workspace = true
rustyline.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = ["raw_value", "preserve_order"] }
serde_with = { workspace = true, features = ["chrono_0_4"] }
slab.workspace = true
syntect.workspace = true
tabled.workspace = true
tar.workspace = true
tempfile.workspace = true
termcolor.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
tokio-util = { workspace = true, features = ["compat"] }
toml.workspace = true
wasmbin.workspace = true
wasmtime.workspace = true

[dev-dependencies]
insta.workspace = true
spacetimedb-testing = { path = "../testing" }

[features]
standalone = ["spacetimedb-standalone"]
default = ["standalone"]
