[package]
name = "spacetimedb-client-api-messages"
version.workspace = true
edition.workspace = true
license-file = "LICENSE"
description = "Types for the SpacetimeDB client API messages"

[dependencies]
prost.workspace = true
strum.workspace = true

[build-dependencies]
prost-build.workspace = true
