[package]
name = "spacetimedb-client-api-messages"
version.workspace = true
edition.workspace = true
license-file = "LICENSE"
description = "Types for the SpacetimeDB client API messages"

[dependencies]
spacetimedb-lib = { workspace = true, features = ["serde"] }
spacetimedb-sats.workspace = true

chrono = { workspace = true, features = ["serde"] }
prost.workspace = true
serde = { workspace = true, features = ["derive"] }
strum.workspace = true
thiserror.workspace = true

[build-dependencies]
prost-build.workspace = true

[dev-dependencies]
hex.workspace = true
itertools.workspace = true
proptest.workspace = true
serde_json.workspace = true
