[package]
name = "spacetimedb-client-api-messages"
version.workspace = true
edition.workspace = true
license-file = "LICENSE"
description = "Types for the SpacetimeDB client API messages"

[dependencies]
spacetimedb-lib = { workspace = true, features = ["serde"] }
spacetimedb-primitives.workspace = true
spacetimedb-sats = { workspace = true, features = ["bytestring"] }

bytes.workspace = true
bytestring.workspace = true
brotli.workspace = true
chrono = { workspace = true, features = ["serde"] }
enum-as-inner.workspace = true
flate2.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
serde_with.workspace = true
smallvec.workspace = true
strum.workspace = true
thiserror.workspace = true
derive_more.workspace = true

[dev-dependencies]
hex.workspace = true
itertools.workspace = true
proptest.workspace = true
serde_json.workspace = true
