[package]
name = "spacetimedb-client-api"
version = "0.8.1"
edition = "2021"
license-file = "LICENSE"
description = "The HTTP API for SpacetimeDB"

[dependencies]
spacetimedb-core = { path = "../core", version = "0.8.1" }
tokio = { version = "1.2", features = ["full"] }
lazy_static = "1.4.0"
spacetimedb-lib = { path = "../lib", version = "0.8.1" }
log = "0.4.4"
serde = "1.0.136"
serde_json = { version = "1.0", features = ["raw_value"] }
anyhow = { version = "1.0.57", features = ["backtrace"] }
regex = "1"
prometheus = "0.13.0"
email_address = "0.2.3"
tempfile.workspace = true
async-trait = "0.1.60"
chrono = { version = "0.4.23", features = ["serde"]}
rand = "0.8.5"
axum.workspace = true
axum-extra.workspace = true
hyper.workspace = true
hyper-util.workspace = true
http.workspace = true
headers.workspace = true
mime = "0.3.17"
tokio-stream = { version = "0.1.12", features = ["sync"] }
futures = "0.3"
bytes = "1"
bytestring = "1"
tokio-tungstenite.workspace = true
itoa = "1.0.9"
derive_more = "0.99.17"
