[package]
name = "spacetimedb-client-api"
version.workspace = true
edition.workspace = true
license-file = "LICENSE"
description = "The HTTP API for SpacetimeDB"
rust-version.workspace = true

[dependencies]
spacetimedb-client-api-messages.workspace = true
spacetimedb-core.workspace = true
spacetimedb-data-structures.workspace = true
spacetimedb-datastore.workspace = true
spacetimedb-lib = { workspace = true, features = ["serde"] }
spacetimedb-paths.workspace = true
spacetimedb-schema.workspace = true

base64.workspace = true
tokio = { version = "1.2", features = ["full"] }
lazy_static = "1.4.0"
log = "0.4.4"
serde = "1.0.136"
serde_json = { version = "1.0", features = ["raw_value"] }
anyhow = { version = "1.0.57", features = ["backtrace"] }
regex = "1"
prometheus = "0.13.0"
email_address = "0.2.3"
tempfile.workspace = true
async-trait = "0.1.60"
chrono = { workspace = true, features = ["serde"] }
rand.workspace = true
axum.workspace = true
axum-extra.workspace = true
hyper.workspace = true
hyper-util.workspace = true
http.workspace = true
headers.workspace = true
mime = "0.3.17"
tokio-stream = { version = "0.1.12", features = ["sync"] }
tower-layer.workspace = true
tower-service.workspace = true
tower-http.workspace = true
futures = "0.3"
bytes = "1"
tracing.workspace = true
bytestring = "1"
tokio-tungstenite.workspace = true
itoa.workspace = true
derive_more = "0.99.17"
uuid.workspace = true
jsonwebtoken.workspace = true
scopeguard.workspace = true
serde_with.workspace = true
async-stream.workspace = true
humantime.workspace = true

[target.'cfg(not(target_env = "msvc"))'.dependencies]
jemalloc_pprof.workspace = true

[dev-dependencies]
jsonwebtoken.workspace = true
pretty_assertions = { workspace = true, features = ["unstable"] }
toml.workspace = true

[lints]
workspace = true

[features]
unstable = []
