[package]
name = "spacetimedb-cloud"
version = "0.3.4"
edition = "2021"
publish = false

[[bin]]
name = "spacetimedb-cloud"   # The name of the target.
path = "src/main.rs"   # The source file of the target.
test = true            # Is tested by default.
bench = false          # Benching off, because of https://bheisler.github.io/criterion.rs/book/faq.html#cargo-bench-gives-unrecognized-option-errors-for-valid-command-line-options
doc = false            # Is documented by default.
proc-macro = false     # Set to `true` for a proc-macro library.
harness = true         # Use libtest harness.
required-features = [] # Features required to build this target (N/A for lib)

[dependencies] 
spacetimedb-core = { path = "../core" }
spacetimedb-client-api = { path = "../client-api" }
tokio = { version = "1.2", features = ["full"] }
clap = { version = "4.0.18", features = ["derive"] }
futures = "0.3"
prost = "0.10"
lazy_static = "1.4.0"
once_cell = "1.17.0"
spacetimedb-lib = { path = "../lib" }
log = "0.4.4"
gotham = "0.7.1"
gotham_derive = "0.7"
hyper = "0.14.18"
serde = "1.0.136"
serde_json = { version = "1.0", features = ["raw_value"] }
anyhow = { version = "1.0.57", features = ["backtrace"] }
sha1 = "0.10.1"
base64 = "0.13.0"
tokio-tungstenite = "*"
regex = "1"
prometheus = "0.13.0"
hostname = "^0.3"
sled = "0.34.7"
email_address = "0.2.3"
bytes = "1.2.0" # TODO(rdaum): there's also a copy/fork of this inside prost. hmph.
tempdir = "0.3.7"
urlencoding = "2.1.2"
itertools = "0.10.5"
async-trait = "0.1.60"
