[package]
name = "spacetimedb-commitlog"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license-file = "LICENSE"

description = "Implementation of the SpacetimeDB commitlog."

[dependencies]
bitflags.workspace = true
crc32c.workspace = true
itertools.workspace = true
log.workspace = true
spacetimedb-sats.workspace = true
thiserror.workspace = true

[dev-dependencies]
env_logger.workspace = true
proptest.workspace = true
rand.workspace = true
