[package]
name = "spacetimedb-commitlog"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license-file = "LICENSE"

description = "Implementation of the SpacetimeDB commitlog."

[features]
default = ["serde"]
# Enable types + impls useful for testing
test = []

[dependencies]
bitflags.workspace = true
crc32c.workspace = true
itertools.workspace = true
log.workspace = true
memmap2 = "0.9.4"
serde = { workspace = true, optional = true }
spacetimedb-primitives.workspace = true
spacetimedb-paths.workspace = true
spacetimedb-sats.workspace = true
spacetimedb-fs-utils.workspace = true
tempfile.workspace = true
thiserror.workspace = true

[dev-dependencies]
env_logger.workspace = true
once_cell.workspace = true
pretty_assertions = { workspace = true, features = ["unstable"] }
proptest-derive.workspace = true
proptest.workspace = true
rand.workspace = true
tempfile.workspace = true
