[package]
name = "spacetimedb-core"
version = "0.7.0"
edition = "2021"
license-file = "LICENSE"
description = "The core library for SpacetimeDB"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "spacetimedb"   # The name of the target.
path = "src/lib.rs"    # The source file of the target.

# Benching off, because of https://bheisler.github.io/criterion.rs/book/faq.html#cargo-bench-gives-unrecognized-option-errors-for-valid-command-line-options
bench = false

[[bench]]
name = "odb_flavor_bench"
harness = false

[dependencies]
spacetimedb-lib = { path = "../lib", version = "0.7.0" }
spacetimedb-sats = { path = "../sats", version = "0.7.0" }
spacetimedb-vm = { path = "../vm", version = "0.7.0" }
spacetimedb-client-api-messages = { path = "../client-api-messages", version = "0.7.0" }

anyhow.workspace = true
async-trait.workspace = true
backtrace.workspace = true
base64.workspace = true
bytes.workspace = true
bytestring.workspace = true
clap.workspace = true
crossbeam-channel.workspace = true
derive_more.workspace = true
dirs.workspace = true
email_address.workspace = true
flate2.workspace = true
fs2.workspace = true
futures.workspace = true
genawaiter.workspace = true
hex.workspace = true
hostname.workspace = true
hyper.workspace = true
imara-diff.workspace = true
indexmap.workspace = true
itertools.workspace = true
jsonwebtoken.workspace = true
lazy_static.workspace = true
log.workspace = true
nonempty.workspace = true
once_cell.workspace = true
openssl.workspace = true
parking_lot.workspace = true
paste.workspace = true
pin-project-lite.workspace = true
prometheus.workspace = true
prost.workspace = true
rayon-core.workspace = true
regex.workspace = true
rustc-demangle.workspace = true
rustc-hash.workspace = true
scopeguard.workspace = true
sendgrid.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_path_to_error.workspace = true
serde_with.workspace = true
sha1.workspace = true
slab.workspace = true
sled.workspace = true
sqlparser.workspace = true
strum.workspace = true
tempdir.workspace = true
thiserror.workspace = true
tokio-util.workspace = true
tokio.workspace = true
tracing-appender.workspace = true
tracing-core.workspace = true
tracing-flame.workspace = true
tracing-log.workspace = true
tracing-subscriber.workspace = true
tracing-tracy.workspace = true
tracing.workspace = true
url.workspace = true
urlencoding.workspace = true
uuid.workspace = true
wasmer-middlewares.workspace = true
wasmer-types.workspace = true
wasmer-vm.workspace = true
wasmer.workspace = true
wasmparser.workspace = true
# Rocksdb ostorage backend, linked only if "rocksdb" feature enabled.
rocksdb = {workspace = true, optional = true}

[features]
# Optional storage engines.
odb_rocksdb = ["dep:rocksdb"]
odb_sled = []
default = ["odb_sled"]

[dev-dependencies]
rusqlite.workspace = true
criterion.workspace = true
rand.workspace = true

[build-dependencies]
prost-build.workspace = true
