[package]
name = "spacetimedb-csharp-tests"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

[[test]]
name = "csharp"
path = "tests/csharp.rs"
harness = false

[dev-dependencies]
anyhow.workspace = true
spacetimedb-language-test-support.workspace = true

[lints]
workspace = true
